--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     </title>
 </head>
 <body>
-    
+    <h1> Hello everyone</h1>
+    <h2> See you soon</h2>
+    <h3> I love the blue coat</h3>
+    <h4> i live by the river</h4>
 </body>
+
 </html>
