--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My second github repo
     </title>
+    <link rel="icon" type="image/x-icon" href="/istockphoto-528415533-612x612.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,7 +14,9 @@
     <h2> See you soon</h2>
     <h3> I love the blue coat</h3>
     <h4> i live by the river</h4>
-    <p>Hello guys nice to meet you. I missed you all. its been so many days wee met.<br></p>
+    <p>Hello guys nice to meet you. I missed you all. its been so many days wee met.</p>
+    <img src="actress.jpg" alt="">
+    <img src="pngegg.png" alt="">
 </body>
 
 </html>
