--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My second github repo
     </title>
-    <link rel="icon" type="image/x-icon" href="/istockphoto-528415533-612x612.jpg">
+    <link rel="short image" type="image/jpg" href="img/laughing.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
